--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,101 @@
-Flask[async]
-Flask-SQLAlchemy
-Flask-WTF
-Flask-Mail
-Flask-Caching
-Flask-Login
-Flask-Admin
-email-validator
-itsdangerous
+amqp==5.1.1
+asgiref==3.5.0
+async-timeout==4.0.2
+attrs==21.4.0
+bcrypt==3.2.2
+billiard==3.6.4.0
+biopython==1.79
+blinker==1.4
+boto3==1.24.54
+botocore==1.27.54
+Brotli==1.0.9
+cachelib==0.6.0
+celery==5.2.7
+certifi==2022.5.18.1
+cffi==1.15.1
+charset-normalizer==2.0.12
+click==8.0.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+colour==0.1.5
+cryptography==37.0.4
+cycler==0.11.0
+dash==2.5.0
+dash-bio==1.0.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+Deprecated==1.2.13
+dnspython==2.2.0
+email-validator==1.1.3
+eventlet==0.33.1
+Flask==2.0.2
+Flask-Admin==1.5.8
+Flask-Caching==1.10.1
+Flask-Compress==1.12
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-PyMongo==2.3.0
+Flask-Session==0.4.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
+fonttools==4.33.3
+GEOparse==2.0.3
+gevent==21.12.0
+greenlet==1.1.2
+gunicorn==20.1.0
+idna==3.3
+iniconfig==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.3
+jmespath==1.0.1
+joblib==1.1.0
+jsonschema==4.6.0
+kiwisolver==1.4.2
+kombu==5.2.4
+MarkupSafe==2.0.1
+matplotlib==3.5.2
+mongo-datatables==0.3.0
+numpy==1.22.1
+packaging==21.3
+pandas==1.4.0
+paramiko==2.11.0
+ParmEd==3.4.3
+periodictable==1.6.1
+Pillow==9.1.1
+plotly==5.5.0
+pluggy==1.0.0
+prompt-toolkit==3.0.30
+py==1.11.0
+pycparser==2.21
+pymongo==4.0.1
+PyNaCl==1.5.0
+pyparsing==3.0.7
+pyrsistent==0.18.1
+pytest==6.2.5
+python-dateutil==2.8.2
+pytz==2021.3
+redis==4.3.4
+requests==2.28.0
+s3transfer==0.6.0
+scikit-learn==1.1.1
+scipy==1.8.1
+seaborn==0.11.2
+shortuuid==1.0.8
+six==1.16.0
+SQLAlchemy==1.4.31
+ssh-pymongo==1.0.4
+sshtunnel==0.4.0
+tenacity==8.0.1
+threadpoolctl==3.1.0
+toml==0.10.2
+tqdm==4.64.0
+urllib3==1.26.9
+vine==5.0.0
+wcwidth==0.2.5
+Werkzeug==2.0.2
+wrapt==1.14.1
 WTForms==2.3.3
-pytest
-pandas
-plotly
-numpy
-pymongo
-shortuuid
-gunicorn
-seaborn
-dash_bio
-tqdm
-boto3
-celery
+zope.event==4.5.0
+zope.interface==5.4.0
